# Career-Copilot-Agent

Backend/: .env.sample  dev-logs.txt  github_cache.json  main.py  pyproject.toml  relevance.json  toBuild.txt
Backend/app/resume/: builder.py  utils.py
Backend/app/services/: cache.py  code_extractors.py  dependency_extractor.py  gemini_client.py  github_analyzer.py  github_fetcher.py  github_profile.py
Backend/text-input/: jd.txt
